Add about activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,19 @@
         android:theme="@style/Theme.Bullseye"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".AboutActivity"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.Bullseye.NoActionBar.FullScreen"
-            android:exported="true">
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.Bullseye.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
